# Modal-Folding

./: CMakeLists.txt  README.md
Meshes/: disk_1029.mtl  square20x20.mtl  squareSheet_data.json
src/: FoldingApplication.cpp  FoldingApplication.h  SOBendingModeShellStructure.cpp  SOBendingModeShellStructure.h  SOPeriodicBendingModeShellStructure.cpp  SOPeriodicBendingModeShellStructure.h  SOReflectionBendingModeShellStructure.cpp  SOReflectionBendingModeShellStructure.h  foldingShellMeshStructure.cpp  foldingShellMeshStructure.h  main.cpp
src/Codegen/: computeCSTShellEnergy.cpp  computeCSTShellEnergy.h  computeCSTShellEnergyGreenStrain.cpp  computeCSTShellEnergyGreenStrain.h  computeCSTShellEnergyGreenStrainNorm.cpp  computeCSTShellEnergyGreenStrainNorm.h  computeCylindericalTransformVertex.cpp  computeCylindericalTransformVertex.h  computeDSBendingFixedRestPoseCorrectEnergy.cpp  computeDSBendingFixedRestPoseCorrectEnergy.h  computeDSBendingFixedRestPoseEnergy.cpp  computeDSBendingFixedRestPoseEnergy.h  computeHingeAngleAlighmentEnergy.cpp  computeHingeAngleAlighmentEnergy.h  computeHingeEdgeAlighmentEnergy.cpp  computeHingeEdgeAlighmentEnergy.h  computeKoiterShapeOperatorRestPoseBendingEnergy.cpp  computeKoiterShapeOperatorRestPoseBendingEnergy.h  computeOrthotropicShapeOperatorRestPoseBendingEnergy.cpp  computeOrthotropicShapeOperatorRestPoseBendingEnergy.h  computeReflectionXPlaneDSBendingFixedRestPoseEnergy.cpp  computeReflectionXPlaneDSBendingFixedRestPoseEnergy.h  computeReflectionXPlaneTheta.cpp  computeReflectionXPlaneTheta.h  computeReflectionYPlaneTheta.cpp  (+13 more)
(+16 files in other folders)
